...
        },
    ) { innerPadding ->
        Surface(
            modifier = Modifier
                .fillMaxSize()
                .padding(innerPadding)
                .testTag("glavni_ekran"),
            color = MaterialTheme.colorScheme.background,
        ) {
            NavigationGraph(
                navController, 
                userName, 
                userEmail, 
...
